--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Today</h1>
     <ul>
         <li>wake up</li>
-        <li>work</li>
+        <li>play</li>
         <li>sleep</li>
     </ul>
 </body>
